--- a/SourceCode/Root/Testing/CV.Test.Sequence.Svc/CV.Test.Sequence.Svc.csproj
+++ b/SourceCode/Root/Testing/CV.Test.Sequence.Svc/CV.Test.Sequence.Svc.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Global\CV.Global\Properties\SharedAssemblyCopyright.cs">
+      <Link>Properties\SharedAssemblyCopyright.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
